version/0.12/_sources/API/_autosummary/ansys.aedt.core.modules.solve_setup.SetupMaxwell.rst.txt
SetupMaxwell
============

.. currentmodule:: ansys.aedt.core.modules.solve_setup

.. autoclass:: SetupMaxwell

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      SetupMaxwell.add_eddy_current_sweep
      
      
      SetupMaxwell.add_mesh_link
      
      
      SetupMaxwell.analyze
      
      
      SetupMaxwell.create
      
      
      SetupMaxwell.create_report
      
      
      SetupMaxwell.delete
      
      
      SetupMaxwell.disable
      
      
      SetupMaxwell.enable
      
      
      SetupMaxwell.enable_control_program
      
      
      SetupMaxwell.enable_expression_cache
      
      
      SetupMaxwell.get_profile
      
      
      SetupMaxwell.get_solution_data
      
      
      SetupMaxwell.jsonalize_tree
      
      
      SetupMaxwell.start_continue_from_previous_setup
      
      
      SetupMaxwell.suppress_all
      
      
      SetupMaxwell.unsuppress_all
      
      
      SetupMaxwell.update
      
      
      SetupMaxwell.update_property
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      SetupMaxwell.available_properties
      SetupMaxwell.command
      SetupMaxwell.default_intrinsics
      SetupMaxwell.is_solved
      SetupMaxwell.name
      SetupMaxwell.omodule
      SetupMaxwell.p_app
      SetupMaxwell.properties
      SetupMaxwell.props
      SetupMaxwell.sweeps
   
   